# uni_orm_lws

./: .clang-format  .gitignore  README.md  startup.ps1
3LW/: CMakeLists.txt  ORM_3LW.code-workspace  function.cpp  function.hpp  main.cpp
3LW/files/: table.txt  table1.txt  table2.txt  table3.txt  table_readable.txt
4LW/: ORM_4LW.code-workspace  function.cpp  function.hpp  main.cpp
4LW/files/: table.txt
Template/: CMakeLists.txt  ORM_NLW.code-workspace  function.hpp  main.cpp  Отчет.odt
